--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -7,11 +7,13 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeee
+	background: #eeeee;
+
 }
 </style>
 </head>
 <body>
+Hallo
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
