--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -13,7 +13,7 @@ body {
 </style>
 </head>
 <body>
-Hallo
+Hallo.
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
