--- a/aufgabe0/aufgabe0.htm
+++ b/aufgabe0/aufgabe0.htm
@@ -1,1 +1,13 @@
-sdf
+<!DOCTYPE html>
+<html lang="de">
+    <head>
+        <meta charset="utf-8">
+        <title>Aufgabe 0</title>
+        <link rel="stylesheet" type="text/css" href="aufgabe0.css">
+        <script src="js/aufgabe0.js"></script>
+    </head>
+    <body>
+        <p id="hallo"> </p>
+        
+            </body>
+</html>
