--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </style>
 </head>
 <body>
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe0/aufgabe0.htm" target="blank">Aufgabe 0, 18.03.2017</a><br>
 
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
