--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -15,7 +15,7 @@ body {
 <body>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe0/aufgabe0.htm" target="blank">Aufgabe 0, 18.03.2017</a><br>
 <a href="https://jacquelinewagner.github.io/" target="blank">Userpage, 18.03.2017</a><br>
-<a href="https://github.com/JacquelineWagner/EIA2">Repository, 18.03.2017</a><br>
+<a href="https://github.com/JacquelineWagner/EIA2" target="blank">Repository, 18.03.2017</a><br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
