--- a/aufgabe2/aufgabe2.htm
+++ b/aufgabe2/aufgabe2.htm
@@ -1,3 +1,16 @@
+<!--  
+Aufgabe: 2
+Name: Jacqueline Wagner
+Matrikel: 254786
+Datum: 02.04.2017
+    
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
+Er wurde nicht kopiert und auch nicht diktiert.
+
+Die Aufgabe wurde in Zusammenarbeit mit Selina Mazzaro und Jana Burger erstellt.-->
+
+
+
 <html>
 <head>
 <meta charset="utf-8" />
