--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -13,6 +13,9 @@ body {
 </style> 
 </head>
 <body>
+
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe2/img_2558.jpg" target="blank">Aufgabe 2b, 02.04.2017</a><br>
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe2/aufgabe2.htm" target="blank">Aufgabe 2a, 02.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe2/img_2533.jpg" target="blank">Aufgabe 2 Konzept, 29.03.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe1/aufgabe1.htm" target="blank">Aufgabe 1 - HTML, 26.03.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe1/eia-a1.pdf" target="blank">Aufgabe 1, 26.03.2017</a><br>
