--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -14,6 +14,9 @@ body {
 </head>
 <body>
 
+
+
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe3/eia-a3.pdf" target="blank">Aufgabe 3 Konzept, 05.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe2/img_2558.jpg" target="blank">Aufgabe 2b, 02.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe2/aufgabe2.htm" target="blank">Aufgabe 2a, 02.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe2/img_2533.jpg" target="blank">Aufgabe 2 Konzept, 29.03.2017</a><br>
