--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -14,6 +14,9 @@ body {
 </head>
 <body>
 
+
+
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe4/konzept.jpg" target="blank">Aufgabe 4 Konzept, 12.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe3/aufgabe3a.htm" target="blank">Aufgabe 3a, 09.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe3/aufgabe3b.htm" target="blank">Aufgabe 3b, 09.04.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe3/eia-a3.pdf" target="blank">Aufgabe 3 Konzept, 05.04.2017</a><br>
