--- a/aufgabe3/aufgabe3a.htm
+++ b/aufgabe3/aufgabe3a.htm
@@ -19,6 +19,6 @@ Die Aufgabe wurde in Zusammenarbeit mit Selina Mazzaro und Jana Burger erstellt.
 <link rel="stylesheet" type="text/css" href="aufgabe3a.css">
 </head>
 <body>
-
+<p id="Summe"></p>
 </body>
 </html>
