--- a/aufgabe3/aufgabe3a.htm
+++ b/aufgabe3/aufgabe3a.htm
@@ -15,7 +15,7 @@ Die Aufgabe wurde in Zusammenarbeit mit Selina Mazzaro und Jana Burger erstellt.
 <head>
 <meta charset="utf-8" />
 <title>Aufgabe 3</title>
-<script src="js/aufgabe3a.js"></script>
+<!-- <script src="js/aufgabe3a.js"></script> -->
 <link rel="stylesheet" type="text/css" href="aufgabe3a.css">
 </head>
 <body>
