--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -14,6 +14,7 @@ body {
 </head>
 <body>
 
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe7/konzept7.jpg" target="blank">Aufgabe 7 Konzept, 10.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe6/aufgabe6b.htm" target="blank">Aufgabe 6b, 07.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe6/aufgabe6a.htm" target="blank">Aufgabe 6a, 07.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe6/img_2959.jpg" target="blank">Aufgabe 6 Konzept, 04.05.2017</a><br>
