--- a/aufgabe7/aufgabe7.htm
+++ b/aufgabe7/aufgabe7.htm
@@ -15,7 +15,9 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <head>
 <meta charset="utf-8" />
 <script src="js/main.js"></script>
-<script src="js/aufgabe7-2.js"></script>
+<script src="js/flower.js"></script>
+<script src="js/bienen.js"></script>
+<script src="js/hintergrund.js"></script>
 </head>
 <body>
 <canvas width="400" height="250"></canvas>
