--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -14,7 +14,7 @@ body {
 </head>
 <body>
 
-
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe8/konzept8.pdf" target="blank">Aufgabe 8 Konzept, 18.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe7/aufgabe7.htm" target="blank">Aufgabe 7, 13.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe7/konzept7.jpg" target="blank">Aufgabe 7 Konzept, 10.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe6/aufgabe6b.htm" target="blank">Aufgabe 6b, 07.05.2017</a><br>
