--- a/aufgabe8/aufgabe8.htm
+++ b/aufgabe8/aufgabe8.htm
@@ -15,15 +15,17 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <head>
 <meta charset="utf-8" />
 
+<script src="js/main.js"></script>
+<script src="js/hintergrund.js"></script>
 <script src="js/blumen.js"></script>
+<script src="js/bienen.js"></script>
+<script src="js/dummebienen.js"></script>
+<script src="js/honeybees.js"></script>
+<script src="js/tulpe.js"></script>
 <script src="js/blume1.js"></script>
 <script src="js/blume3.js"></script>
-<script src="js/tulpe.js"></script>
-<script src="js/bienen.js"></script>
-<script src="js/honeybees.js"></script>
 
-<script src="js/hintergrund.js"></script>
-<script src="js/main.js"></script>
+
 </head>
 <body>
 	<canvas width="400" height="250"></canvas>
