--- a/aufgabe9/aufgabe9.htm
+++ b/aufgabe9/aufgabe9.htm
@@ -25,12 +25,16 @@
 
 	<fieldset class="Bestellung">
 		<legend> Bestellübersicht </legend>
+		<hr>
+		<p>aktueller Preis</p> 
+		<p id="gesamtsumme"> XX</p>
+		<button id="button">Bestellung überprüfen</button>
 	</fieldset>
-	<!-- 	<button>Prüfen</b utton> --> <!--Eissorten-->
+
+
+	
 	<fieldset class="auswahl" id="Eissorten">
 		<legend> Eissorten, je Kugel 1€ </legend>
-
-
 	</fieldset>
 
 	<!--Toppings -->
@@ -50,8 +54,8 @@
 
 		</p>
 		<p>
-			<input type="radio" name="Radiogroup" value="radio1" id="radio1" />
-			<label for="radio1">Waffel</label>
+			<input type="radio" name="Radiogroup" value="radio2" id="radio2" />
+			<label for="radio2">Waffel</label>
 
 		</p>
 
@@ -62,9 +66,9 @@
 	<fieldset class="auswahl">
 		<legend> Lieferung </legend>
 		<select name="Select" id="select">
-			<option value="option1">Standart 0€</option>
+			<option value="option1">Standart</option>
 			<optgroup label=""></optgroup>
-			<option value="option3">Express 3€</option>
+			<option value="option3">Express</option>
 		</select>
 	</fieldset>
 
