--- a/aufgabe9/aufgabe9.htm
+++ b/aufgabe9/aufgabe9.htm
@@ -6,7 +6,7 @@ Datum: 04.06.2017
     
 
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
-Er wurde nicht kopiert und auch nicht diktiert. Teile der Aufgabe zusammen mit Jacqueline und Selina erstellt*/
+Er wurde nicht kopiert und auch nicht diktiert. Teile der Aufgabe zusammen mit Jana und Selina erstellt*/
 -->
 
 
