--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -14,6 +14,8 @@ body {
 </head>
 <body>
 
+
+<a href="https://jacquelinewagner.github.io/EIA2/aufgabe10/ClientServer.docx" target="blank">Aufgabe 10 / 1.Vorbereitung, 18.06.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe9/aufgabe9.htm" target="blank">Aufgabe 9, 04.06.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe9/konzept9.pdf" target="blank">Aufgabe 9 Konzept, 28.05.2017</a><br>
 <a href="https://jacquelinewagner.github.io/EIA2/aufgabe8/aufgabe8.htm" target="blank">Aufgabe 8, 21.05.2017</a><br>
