--- a/abschlussaufgabe/abschlussaufgabe.htm
+++ b/abschlussaufgabe/abschlussaufgabe.htm
@@ -15,8 +15,9 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <head>
 <meta charset="utf-8" />
 <script src="js/main.js"></script>
-<script src="js/flower.js"></script>
-<!-- <script src="js/bienen.js"></script> -->
+<script src="js/fische.js"></script>
+<script type="js/ameisen.js"></script>
+<script src="js/bienen.js"></script>
 <script src="js/hintergrund.js"></script>
 </head>
 <body>
