--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -17,10 +17,11 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script src="js/main.js"></script>
 <script src="js/fische.js"></script>
 <script type="js/ameisen.js"></script>
-<script src="js/bienen.js"></script>
+<script type="js/ameisen.js"></script>
+<script src="js/dummeAmeisen.js"></script>
 <script src="js/hintergrund.js"></script>
 </head>
 <body>
-<canvas width=620" height="400"></canvas>
-</body> 
+	<canvas width=620 " height="400"></canvas>
+</body>
 </html>
