--- a/abschlussaufgabe1/aufgabe8.htm
+++ b/abschlussaufgabe1/aufgabe8.htm
@@ -1,8 +1,8 @@
 <!--  
-Aufgabe: 7
+Aufgabe: 8
 Name: Jacqueline Wagner
 Matrikel: 254786
-Datum: 07.05.2017
+Datum: 21.05.2017
     
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
 Er wurde nicht kopiert und auch nicht diktiert.
@@ -14,11 +14,16 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <html>
 <head>
 <meta charset="utf-8" />
+
 <script src="js/main.js"></script>
-<script src="js/fische.js"></script>
-<script type="js/ameisen.js"></script>
-<script src="js/dummeAmeisen.js"></script>
 <script src="js/hintergrund.js"></script>
+<script src="js/ameisen.js"></script>
+<script src="js/dummeameisen.js"></script>
+<script src="js/fische.js"></script>
+
+
+
+
 </head>
 <body>
 	<canvas width="620" height="400"></canvas>
