--- a/abschlussaufgabe1/aufgabe8.htm
+++ b/abschlussaufgabe1/aufgabe8.htm
@@ -20,6 +20,8 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script src="js/ameisen.js"></script>
 <script src="js/dummeameisen.js"></script>
 <script src="js/fische.js"></script>
+<link rel="stylesheet" type="text/css" href="abschlussaufgabe.css">
+
 
 
 
@@ -27,5 +29,6 @@ Er wurde nicht kopiert und auch nicht diktiert.
 </head>
 <body>
 	<canvas width="620" height="400"></canvas>
+	
 </body>
 </html>
