--- a/abschlussaufgabe1/abschlussaufgabe.htm
+++ b/abschlussaufgabe1/abschlussaufgabe.htm
@@ -14,12 +14,13 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <html>
 <head>
 <meta charset="utf-8" />
-
 <script src="js/main.js"></script>
 <script src="js/hintergrund.js"></script>
 <script src="js/ameisen.js"></script>
 <script src="js/dummeameisen.js"></script>
 <script src="js/fische.js"></script>
+
+
 <link rel="stylesheet" type="text/css" href="abschlussaufgabe.css">
 
 
@@ -28,7 +29,10 @@ Er wurde nicht kopiert und auch nicht diktiert.
 
 </head>
 <body>
-	<canvas width="620" height="400"></canvas>
-	
+	<canvas id="canvas1" width="620" height="400"></canvas>
+	<button id="ameise" ></button>
+	<button id="fischis" ></button>
+	<button id="vogel" >hallo</button>
+<!-- 	<canvas width="20" height="20"></canvas> -->
 </body>
 </html>
