--- a/abschlussaufgabe1/abschlussaufgabe.htm
+++ b/abschlussaufgabe1/abschlussaufgabe.htm
@@ -29,10 +29,11 @@ Er wurde nicht kopiert und auch nicht diktiert.
 
 </head>
 <body>
+
 	
 	<button id="ameise" ></button>
-	<button id="fischis" ></button>
-	<button id="vogel" >hallo</button>
+<!-- 	<button id="fischis" ></button> -->
+<!-- 	<button id="vogel" >hallo</button> -->
 	<canvas id="canvas1" width="620" height="400"></canvas>
 <!-- 	<canvas width="20" height="20"></canvas> -->
 </body>
