--- a/abschlussaufgabe1/abschlussaufgabe.htm
+++ b/abschlussaufgabe1/abschlussaufgabe.htm
@@ -40,7 +40,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 		<canvas id="canvas1" width="620" height="400"></canvas>
 			<button id="ameise" ></button>
 		<button id="fischis" ></button>
-		<button id="vogel" >hallo</button>
+<!-- 		<button id="vogel" >hallo</button> -->
 		
 	</div>
 
