--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -14,7 +14,6 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <html>
 <head>
 <meta charset="utf-8" />
-
 <link rel="stylesheet" type="text/css" href="abschlussaufgabe.css">
 <script src="js/main.js"></script>
 <script src="js/hintergrund.js"></script>
@@ -23,14 +22,28 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script src="js/fische.js"></script>
 
 
-
-
-
-
-
 </head>
 <body>
 
+	<audio id="myAudio">
+  <source src="bird2.wav" type="audio/wav">
+
+</audio>
+
+
+<button id="vogel2" onclick="playAudio()" type="button"></button>
+
+
+
+<script>
+var x = document.getElementById("myAudio"); 
+
+function playAudio() { 
+    x.play(); 
+} 
+
+ 
+</script>
 
 	<!-- 	<button id="ameise" ></button> -->
 	<!-- 	<button id="fischis" ></button> -->
@@ -38,11 +51,12 @@ Er wurde nicht kopiert und auch nicht diktiert.
 
 	<div id="container">
 
+
 		<canvas id="canvas1" width="620" height="400"></canvas>
-			<button id="ameise" ></button>
-		<button id="fischis" ></button>
-<!-- 		<button id="vogel" >hallo</button> -->
-		
+		<button id="ameise"></button>
+		<button id="fischis"></button>
+		<!-- 		<button id="vogel" >hallo</button> -->
+
 	</div>
 
 	<!-- 	<canvas width="20" height="20"></canvas> -->
