--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -26,7 +26,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <body>
 
 	<audio id="myAudio">
-  <source src="bird2.wav" type="audio/wav">
+  <source src="bird2_01.wav" type="audio/wav">
 
 </audio>
 
@@ -41,6 +41,7 @@ var x = document.getElementById("myAudio");
 function playAudio() { 
     x.play(); 
 } 
+
 
  
 </script>
