--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -20,6 +20,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script src="js/hintergrund.js"></script>
 <script src="js/ameisen.js"></script>
 <script src="js/dummeameisen.js"></script>
+<script src="js/schlaueameisen.js"></script>
 <script src="js/fische.js"></script>
 <script src="js/main.js"></script>
 
