--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -52,14 +52,15 @@ function playAudio() {
 
 	<div id="container">
 
-
+<button id="entfernen"></button>
 		<canvas id="canvas1" width="620" height="400"></canvas>
 		<button id="ameise"></button>
 		<button id="fischis"></button>
+	
 		
 
 	</div>
-
+	
 	<!-- 	<canvas width="20" height="20"></canvas> -->
 </body>
 </html>
