--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -19,7 +19,6 @@ Er wurde nicht kopiert und auch nicht diktiert.
 
 <script src="js/hintergrund.js"></script>
 <script src="js/ameisen.js"></script>
-
 <script src="js/fische.js"></script>
 <script src="js/main.js"></script>
 
@@ -32,8 +31,10 @@ Er wurde nicht kopiert und auch nicht diktiert.
 
 </audio>
 
-
+<button id="vogel1" onclick="playAudio()" type="button"></button>
 <button id="vogel2" onclick="playAudio()" type="button"></button>
+<button id="vogel3" onclick="playAudio()" type="button"></button>
+<button id="vogel4" onclick="playAudio()" type="button"></button>
 
 
 
