--- a/abschlussaufgabe2/abschlussaufgabe.htm
+++ b/abschlussaufgabe2/abschlussaufgabe.htm
@@ -1,8 +1,8 @@
 <!--  
-Aufgabe: 8
+Aufgabe: Abschlussaufgabe
 Name: Jacqueline Wagner
 Matrikel: 254786
-Datum: 21.05.2017
+Datum: 20.07.2017
     
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
 Er wurde nicht kopiert und auch nicht diktiert.
