--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -16,7 +16,8 @@ body {
 
 
 <a href="https://jacquelinewagner.github.io/EIA2/abschlussaufgabe2/abschlussaufgabe.htm" target="blank">Abschlussaufgabe, 20.07.2017</a><br>
-<!-- <a href="https://jacquelinewagner.github.io/EIA2/abschlussaufgabe2/Abgabe.pdf" target="blank">Konzept Abschlussaufgabe, 20.07.2017</a><br> -->
+<a href="https://jacquelinewagner.github.io/EIA2/abschlussaufgabe2/Konzept.pdf" target="blank">Konzept Abschlussaufgabe, 20.07.2017</a><br>
+<a href="https://jacquelinewagner.github.io/EIA2/abschlussaufgabe2/projektordner.zip" target="blank">Projektordner</a><br>
 
 <a href="https://jacquelinewagner.github.io/Heroku/aufgabe9/aufgabendocx.pdf" target="blank">Fragen Aufgabe 10, 23.06.2017</a><br>
 <a href="https://jacquelinewagner.github.io/Heroku/aufgabe9/aufgabe9.htm" target="blank">Aufgabe 10, 23.06.2017</a><br>
